# ChangeLog for dev-ml/ocaml-data-notation
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ml/ocaml-data-notation/ChangeLog,v 1.12 2013/02/07 14:38:18 aballier Exp $

  07 Feb 2013; Alexis Ballier <aballier@gentoo.org>
  -ocaml-data-notation-0.0.9.ebuild:
  remove old

*ocaml-data-notation-0.0.10 (08 Oct 2012)

  08 Oct 2012; Alexis Ballier <aballier@gentoo.org>
  +ocaml-data-notation-0.0.10.ebuild:
  version bump

  07 Aug 2012; Alexis Ballier <aballier@gentoo.org>
  -ocaml-data-notation-0.0.8.ebuild:
  remove old

*ocaml-data-notation-0.0.9 (07 Jul 2012)

  07 Jul 2012; Alexis Ballier <aballier@gentoo.org>
  +ocaml-data-notation-0.0.9.ebuild:
  version bump, fixing bug #425078

  05 May 2012; Alexis Ballier <aballier@gentoo.org> -files/typeconv3.patch,
  -ocaml-data-notation-0.0.6.ebuild:
  remove old

*ocaml-data-notation-0.0.8 (28 Mar 2012)

  28 Mar 2012; Alexis Ballier <aballier@gentoo.org>
  +ocaml-data-notation-0.0.8.ebuild:
  version bump

  27 Mar 2012; Alexis Ballier <aballier@gentoo.org>
  ocaml-data-notation-0.0.6.ebuild:
  convert to oasis.eclass and force type-conv-3

  06 Oct 2011; Alexis Ballier <aballier@gentoo.org> +files/typeconv3.patch,
  ocaml-data-notation-0.0.6.ebuild:
  add file from upstream bug tracker by Sergei Lebedev to fix build with
  type-conv-3

  06 Jul 2011; Alexis Ballier <aballier@gentoo.org>
  -ocaml-data-notation-0.0.3.ebuild, -ocaml-data-notation-0.0.4.ebuild:
  remove old

*ocaml-data-notation-0.0.6 (25 Jun 2011)

  25 Jun 2011; Alexis Ballier <aballier@gentoo.org>
  +ocaml-data-notation-0.0.6.ebuild:
  version bump

*ocaml-data-notation-0.0.4 (24 May 2011)

  24 May 2011; Alexis Ballier <aballier@gentoo.org>
  +ocaml-data-notation-0.0.4.ebuild:
  version bump

*ocaml-data-notation-0.0.3 (15 Mar 2011)

  15 Mar 2011; Alexis Ballier <aballier@gentoo.org>
  +ocaml-data-notation-0.0.3.ebuild, +metadata.xml: