@@ -2,13 +2,13 @@
 Hash: SHA256
 
 DIST ocaml-data-notation-0.0.10.tar.gz 63163 SHA256 e61d1dc014770b552f005ece61a242ffc6a72471050335ecc3e6ee93710d9fbd SHA512 339ac99f835e2718cb98e7491e482d23028b80834fe43c1cb83aab5ec31d5d1732783dd785b216ab93f37ea2f39fbe247f48886c6e8b02193a21572aca1ba45e WHIRLPOOL 30cba39bc7fc53bcc0e6cb8ced6beffcb24d83dc7cef67df99b6d26d32b141c48601e1a4f1cdd02ed622396d0eb48e06d9a6b9712d7410f41e28d5e8ddfe64ba
-EBUILD ocaml-data-notation-0.0.10.ebuild 819 SHA256 8e098c5378f3f16cca986e1e49e4af14ac71d0842c46b50f80a1bc875d45cc5f SHA512 f6f9cb6d1f6186135d71c338faca60331a507e0d1be8f2a7b98c3c3ed8fb7c60a95f8b3a8410c88fe008f16f53bd28e15c9d6371117e1dcf3f6bb4002ee60c6a WHIRLPOOL 123aade0aca0d25a4104e139d640068aef2ac8c0a9cbbf2af9641f2242d6135014d23e5fc87f3416cd76d283be16b87264fa778c2ec26be34ca3cb88f4bc2b90
-MISC ChangeLog 2030 SHA256 e78ffa0eca4decfddfde7bcc540a329146e7a5969de5e080026c0a0a9c3566f2 SHA512 253b50c5f31a79b16b3add75d87e0205ffc7ae75fbf20c97316e8229dc878ffae50ee2f7778672934c92001c47e24e0d3bc385a0bc277eb716f4d81ed9deefbf WHIRLPOOL 2da97d76be68b42ccae5ae6476dac156613f41bf042da14466a684524bdcdab06f0513d9c746f3dde075692e0243c1912d59c45b864c326452ec2a420ec96d57
+EBUILD ocaml-data-notation-0.0.10.ebuild 827 SHA256 26a0026b7a0a8a1f5370a1ab719b298e56ea957f73e8c240d6523406456eba8c SHA512 6ae769ad03c6c6a8a5950fad0b0d06029da05496485f5d0ac5c0e4eb58522353610e6a4708cab31b0ca7afe1762f27bc605ad6899a1820953b4e311b00262a42 WHIRLPOOL 812621923aa0e9f0d4e5104f041455437eb973244ec679005afe492bc48cd4abe781d35d3993a5343d122886f7ac0e7e1b4ad8f7aaae09b6210fa4b9360b2e75
+MISC ChangeLog 2184 SHA256 6329dbb84781e9e68891628678505773b86b6fc370a7bcda873033f82f3a4f7e SHA512 248e8725c8cdd9de5c9ec4e136551dd6ff10beb81a9aab2d5bce23557ea241853cb466f2ee3f1feecfd49fd6eacfb7311871734a0d5b4229bcefd32d221a9b41 WHIRLPOOL 798bfd24c5d2be346e44b9170994356d92556b9d7319f862868987f40611de3cdc05ce92cb0a6eb24153fd22da306d9405d4e4ad8a1942e31d5e717cd8215916
 MISC metadata.xml 249 SHA256 d4c14c36ffd9245062b47a24024d8fecee009a3795d41e55139c513fe168173e SHA512 046c74510a0d8b9b06081360b529fd6b08d5916a0cc2c0f3f33524dd48e63332e3ac3a6ec8c1b0f078235c6a73f805858b09cf8983ffc4460d7dadaf58b5d947 WHIRLPOOL 21fa9278537d0e7cb60e00cc9ee1bebdf27730647fd744ba72337d16997d563845a8c9fc4d71b8fe04c7d0b4376d339ddd558be91a0d4934fa2c29d4a78607eb
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREIAAYFAlETvFsACgkQvFcC4BYPU0p5cgCbBhzCGID7qhEl8QujZSK3kHzW
-SZgAn2ghMtUC024ju4PgdiuswDO/7/mh
-=/2gy
+iEYEAREIAAYFAlETxt8ACgkQvFcC4BYPU0qK6ACgxVFb8lPqwv6ocvuRrZxEO0lT
+NokAn1iVYbU5iVYj1C1R4zsdXK0ihrpB
+=MaId
 -----END PGP SIGNATURE-----
